--- a/PolicyDetails_WebApplication.csproj
+++ b/PolicyDetails_WebApplication.csproj
@@ -207,14 +207,22 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\Common.cs" />
+    <Compile Include="Models\CustomerDetails.cs" />
     <Compile Include="Models\ErrorResponse.cs" />
     <Compile Include="Models\PolicyData_1.cs" />
+    <Compile Include="Models\PolicyTransactionRequest.cs" />
     <Compile Include="Models\SuccessResponse.cs" />
     <Compile Include="PolicyData.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="PolicyTransaction.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SP_GetPolicyDetails_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SP_GetPolicyTransaction_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="SP_GET_ORDER_DETAILS_Result.cs">
